Added CSS layout

--- a/Home page.html
+++ b/Home page.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
- hjbc   
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="Stylesheet" href="CSS.CSS">
+</head>
+<body>
+  <div class="container">
+    <nav class="sidebar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Project page</a></li>
+        <li><a href="#">Video demonstration</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <main class="content">
+      <h1>Conrad Evans</h1>
+      <p>Welcome to my Portfolio</p>
+    </main>
+  </div>
+</body>
 </html>
