added button to take you to project page

--- a/project_page.html
+++ b/project_page.html
@@ -11,14 +11,14 @@
     <nav class="sidebar">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="project_page.html">Project page</a></li>
+        <li><a href="#">Project page</a></li>
         <li><a href="#">Video demonstration</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
     <main class="content">
       <h1>Conrad Evans</h1>
-      <p>Welcome to my Portfolio</p>
+      <p>project</p>
     </main>
   </div>
 </body>
