added placeholders and design of project page

--- a/project_page.html
+++ b/project_page.html
@@ -17,9 +17,20 @@
       </ul>
     </nav>
     <main class="content">
-      <h1>Conrad Evans</h1>
-      <p>project</p>
+      <header>
+        <h1>Conrads Projects</h1>
+        <p>This page contains placeholder images that will eventually be replaced with my work from term 2 and other modules where I make things worthy of my portfolio.</p>
+      </header>
+
+      <div class="grid-container">
+        <div class="grid-item"><img src="placeholder1.jpg" alt="Placeholder 1"></div>
+        <div class="grid-item"><img src="placeholder2.jpg" alt="Placeholder 2"></div>
+        <div class="grid-item"><img src="placeholder3.jpg" alt="Placeholder 3"></div>
+        <div class="grid-item"><img src="placeholder4.jpg" alt="Placeholder 4"></div>
+        <div class="grid-item"><img src="placeholder5.jpg" alt="Placeholder 5"></div>
+        <div class="grid-item"><img src="placeholder6.jpg" alt="Placeholder 6"></div>
+      </div>
+
     </main>
   </div>
 </body>
-</html>
