--- a/project_page.html
+++ b/project_page.html
@@ -10,7 +10,7 @@
   <div class="container">
     <nav class="sidebar">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="Home page.html">Home</a></li>
         <li><a href="#">Project page</a></li>
         <li><a href="#">Video demonstration</a></li>
         <li><a href="#">Contact</a></li>
