added a contact information form

--- a/Home page.html
+++ b/Home page.html
@@ -13,7 +13,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="project_page.html">Project page</a></li>
         <li><a href="#">Video demonstration</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact_page.html">Contact</a></li>
       </ul>
     </nav>
     <main class="content">
