--- a/project_page.html
+++ b/project_page.html
@@ -13,7 +13,7 @@
         <li><a href="Home page.html">Home</a></li>
         <li><a href="#">Project page</a></li>
         <li><a href="#">Video demonstration</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact_page.html">Contact</a></li>
       </ul>
     </nav>
     <main class="content">
