--- a/Home page.html
+++ b/Home page.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <div class="container">
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     <nav class="sidebar">
       <ul>
         <li><a href="#">Home</a></li>
