added video capabilitys

--- a/project_page.html
+++ b/project_page.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="Home page.html">Home</a></li>
         <li><a href="#">Project page</a></li>
-        <li><a href="#">Video demonstration</a></li>
+        <li><a href="video_demonstration.html">Video demonstration</a></li>
         <li><a href="contact_page.html">Contact</a></li>
       </ul>
     </nav>
