--- a/video_demonstration.html
+++ b/video_demonstration.html
@@ -12,15 +12,19 @@
     <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     <nav class="sidebar">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="Home page.html">Home</a></li>
         <li><a href="project_page.html">Project page</a></li>
-        <li><a href="video_demonstration.html">Video demonstration</a></li>
+        <li><a href="#">Video demonstration</a></li>
         <li><a href="contact_page.html">Contact</a></li>
       </ul>
     </nav>
     <main class="content">
-      <h1>Conrad Evans</h1>
-      <p>Welcome to my Portfolio</p>
+      <h1>Video Demonstration</h1>
+      <p>Watch the video demonstration of my work below:</p>
+      
+      <video controls>
+        <source src="video.mp4" type="video/mp4">
+      </video>
     </main>
   </div>
 </body>
