--- a/contact_page.html
+++ b/contact_page.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="Home page.html">Home</a></li>
         <li><a href="project_page.html">Project page</a></li>
-        <li><a href="#">Video demonstration</a></li>
+        <li><a href="video_demonstration.html">Video demonstration</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
