--- a/Home page.html
+++ b/Home page.html
@@ -21,7 +21,10 @@
     <main class="content">
       <h1>Conrad Evans</h1>
       <p>Welcome to my Portfolio</p>
-    </main>
+    </main> 
+    <footer class="footer">
+      <p>&copy; 2024 Conrad Evans. All rights reserved.</p>
+    </footer>
   </div>
 </body>
 </html>
