added footer to all pages

--- a/video_demonstration.html
+++ b/video_demonstration.html
@@ -26,6 +26,9 @@
         <source src="video.mp4" type="video/mp4">
       </video>
     </main>
+    <footer class="footer">
+      <p>&copy; 2024 Conrad Evans. All rights reserved.</p>
+    </footer>
   </div>
 </body>
 </html>
