--- a/contact_page.html
+++ b/contact_page.html
@@ -31,6 +31,9 @@
       <input type="submit" value="Submit">
     </form>
   </main>
+  <footer class="footer">
+    <p>&copy; 2024 Conrad Evans. All rights reserved.</p>
+  </footer>
     </div>
 </body>
 </html>
