--- a/project_page.html
+++ b/project_page.html
@@ -34,5 +34,8 @@
       </div>
 
     </main>
+    <footer class="footer">
+      <p>&copy; 2024 Conrad Evans. All rights reserved.</p>
+    </footer>
   </div>
 </body>
