--- a/contact_page.html
+++ b/contact_page.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="Stylesheet" href="CSS.CSS">
 </head>
 <body>
@@ -12,7 +13,7 @@
     <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     <nav class="sidebar">
       <ul>
-        <li><a href="Home page.html">Home</a></li>
+        <li><a href="Home page.html"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="project_page.html">Project page</a></li>
         <li><a href="video_demonstration.html">Video demonstration</a></li>
         <li><a href="#">Contact</a></li>
