added site report page

--- a/video_demonstration.html
+++ b/video_demonstration.html
@@ -16,7 +16,8 @@
         <li><a href="Home page.html"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="project_page.html">Project page</a></li>
         <li><a href="#">Video demonstration</a></li>
-        <li><a href="contact_page.html">Contact</a></li>
+        <li><a href="contact_page.html">Contact</a></li> 
+        <li><a href="site_report.html">Site report</a></li>
       </ul>
     </nav>
     <main class="content">
