--- a/Home page.html
+++ b/Home page.html
@@ -17,6 +17,7 @@
         <li><a href="project_page.html">Project page</a></li>
         <li><a href="video_demonstration.html">Video demonstration</a></li>
         <li><a href="contact_page.html">Contact</a></li>
+        <li><a href="site_report.html">Site report</a></li>
       </ul>
     </nav>
     <main class="content">
