change video format from mp4 to a  youtube video

--- a/video_demonstration.html
+++ b/video_demonstration.html
@@ -24,9 +24,8 @@
       <h1>Video Demonstration</h1>
       <p>Watch the video demonstration of my work below:</p>
       
-      <video controls>
-        <source src="video.mp4" type="video/mp4">
-      </video>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe> 
+      
     </main>
     <footer class="footer">
       <p>&copy; 2024 Conrad Evans. All rights reserved.</p>
