--- a/video_demonstration.html
+++ b/video_demonstration.html
@@ -13,7 +13,7 @@
     <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     <nav class="sidebar">
       <ul>
-        <li><a href="Home page.html"><i class="fa-solid fa-house"></i> Home</a></li>
+        <li><a href="Home_page.html"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="project_page.html">Project page</a></li>
         <li><a href="#">Video demonstration</a></li>
         <li><a href="contact_page.html">Contact</a></li> 
@@ -24,7 +24,7 @@
       <h1>Video Demonstration</h1>
       <p>Watch the video demonstration of my work below:</p>
       
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe> 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" ></iframe> 
       
     </main>
     <footer class="footer">
