--- a/project_page.html
+++ b/project_page.html
@@ -13,7 +13,7 @@
     <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     <nav class="sidebar">
       <ul>
-        <li><a href="Home page.html"><i class="fa-solid fa-house"></i> Home</a></li>
+        <li><a href="Home_page.html"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="#">Project page</a></li>
         <li><a href="video_demonstration.html">Video demonstration</a></li>
         <li><a href="contact_page.html">Contact</a></li> 
