--- a/Home_page.html
+++ b/Home_page.html
@@ -22,7 +22,7 @@
     </nav>
     <main class="content">
       <h1>Conrad Evans</h1>
-      <p>Welcome to my Portfolio</p>
+      <p>⁤Welcome to my portfolio. ⁤⁤My name is Conrad Evans, and I'm happy to present to you a glimpse into my skills and expertise. ⁤⁤As you look through the pages of my website, starting with the home page, you'll find a curated collection of my work, showcasing my abilities and accomplishments. ⁤⁤Whether it's web design, graphic design, or anything else I put my mind to. ⁤⁤</p>
     </main> 
     <footer class="footer">
       <p>&copy; 2024 Conrad Evans. All rights reserved.</p>
